typechecker: Add asm type cast tests